# umap

./: .travis.yml  CMakeLists.txt  README.md  setup.sh
docs/sphinx/: getting_started.rst
src/umap/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  EvictManager.cpp  EvictManager.hpp  EvictWorkers.cpp  RegionManager.cpp  RegionManager.hpp  Uffd.cpp  WorkQueue.hpp  WorkerPool.hpp  umap.cpp  umap.h
src/umap/store/: Store.hpp  StoreNetwork.cpp  StoreNetwork.h  rpc_client.cpp  rpc_client.hpp  rpc_server.cpp  rpc_server.hpp  rpc_util.hpp
src/umap/store/rpc/: rpc_client.cpp  rpc_client.hpp  rpc_server.cpp  rpc_server.hpp  rpc_util.hpp
tests/: CMakeLists.txt
tests/remote_lookup/: remote_lookup_client.cpp  remote_lookup_server.cpp  test_remote_lookup.sh
tests/remote_region/: CMakeLists.txt  remote_region.cpp  remote_region_client.cpp  remote_region_server.cpp  stresstest_remoteregion.sh  test_remoteregions.sh
tests/remote_servers/: CMakeLists.txt  remote_servers.cpp  test_remote_servers.sh
tests/remote_stream/: remote_stream_client.cpp  remote_stream_server.cpp  test_remote_stream.sh
tests/remote_xs/src/: CalculateXS.c  GridInit.c  Main.c  Makefile  benchmark_remote_xs.sh  client.c  server.c
tests/update_rates/: CMakeLists.txt  update_rate.cpp
tests/utility/: commandline.hpp
